# shrinko8

./: pyproject.toml
